--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,14 @@
         "yiisoft/yii2-swiftmailer": "*",
         "mdmsoft/yii2-admin": "~2.0",
         "codeception/codeception": "*",
-        "fzaninotto/faker":"*"
+        "fzaninotto/faker":"*",
+        "codeception/codeception":"2.0.*",
+        "codeception/specify": "*",
+        "codeception/verify":"*",
+        "wbraganca/yii2-dynamicform": "*",
+        "kartik-v/yii2-grid": "@dev",
+        "kartik-v/yii2-krajee-base": "@dev",
+        "kartik-v/yii2-mpdf": "@dev"
     },
     "require-dev": {
         "yiisoft/yii2-codeception": "*",
