--- a/tests/codeception/acceptance.suite.yml
+++ b/tests/codeception/acceptance.suite.yml
@@ -20,7 +20,7 @@ modules:
     config:
         PhpBrowser:
 # PLEASE ADJUST IT TO THE ACTUAL ENTRY POINT WITHOUT PATH INFO
-            url: http://localhost:8080
+            url: http://pb
 #        WebDriver:
 #            url: http://localhost:8080
 #            browser: firefox
