user subscriber phone 2

--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
         "wbraganca/yii2-dynamicform": "*",
         "kartik-v/yii2-grid": "@dev",
         "kartik-v/yii2-krajee-base": "@dev",
-        "kartik-v/yii2-mpdf": "@dev"
+        "kartik-v/yii2-mpdf": "@dev",
+        "yiisoft/yii2-jui": "^2.0"
     },
     "require-dev": {
         "yiisoft/yii2-codeception": "*",
